[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "grid_toolbox"
authors = [
    {name = "Henning Franke, MPI-M"},
]
dependencies = [
    "easygems",
    "healpy",
    "numpy",
    "typing"
    "xarray",
]
description = "Toolbox for various grid operations (for ICON data) in Python."
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
classifiers=[
    "Private :: Do Not Upload",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.10"
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "grid_toolbox.__version__"}
